netcdf.h

/* End {put,get}_vars */
/* Begin {put,get}_varm */

EXTERNL int
nc_put_varm_text(int ncid, int varid, const size_t *startp, 
		 const size_t *countp, const ptrdiff_t *stridep,
		 const ptrdiff_t *imapp, const char *op);
EXTERNL int
nc_get_varm_text(int ncid, int varid, const size_t *startp, 
		 const size_t *countp, const ptrdiff_t *stridep,
		 const ptrdiff_t *imapp, char *ip);
EXTERNL int
nc_put_varm_uchar(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, const unsigned char *op);
EXTERNL int
nc_get_varm_uchar(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, unsigned char *ip);
EXTERNL int
nc_put_varm_schar(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, const signed char *op);
EXTERNL int
nc_get_varm_schar(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, signed char *ip);
EXTERNL int
nc_put_varm_short(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, const short *op);
EXTERNL int
nc_get_varm_short(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, short *ip);
EXTERNL int
nc_put_varm_int(int ncid, int varid, const size_t *startp, 
		const size_t *countp, const ptrdiff_t *stridep,
		const ptrdiff_t *imapp, const int *op);
EXTERNL int
nc_get_varm_int(int ncid, int varid, const size_t *startp, 
		const size_t *countp, const ptrdiff_t *stridep,
		const ptrdiff_t *imapp, int *ip);
EXTERNL int
nc_put_varm_long(int ncid, int varid, const size_t *startp, 
		 const size_t *countp, const ptrdiff_t *stridep,
		 const ptrdiff_t *imapp, const long *op);
EXTERNL int
nc_get_varm_long(int ncid, int varid, const size_t *startp, 
		 const size_t *countp, const ptrdiff_t *stridep,
		 const ptrdiff_t *imapp, long *ip);
EXTERNL int
nc_put_varm_float(int ncid, int varid,const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, const float *op);
EXTERNL int
nc_get_varm_float(int ncid, int varid,const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  const ptrdiff_t *imapp, float *ip);
EXTERNL int
nc_put_varm_double(int ncid, int varid,	const size_t *startp, 
		   const size_t *countp, const ptrdiff_t *stridep,
		   const ptrdiff_t *imapp, const double *op);
EXTERNL int
nc_get_varm_double(int ncid, int varid,	const size_t *startp, 
		   const size_t *countp, const ptrdiff_t *stridep,
		   const ptrdiff_t * imapp, double *ip);
/* End {put,get}_varm */
/* Begin {put,get}_var */

EXTERNL int
nc_put_var_text(int ncid, int varid, const char *op);
EXTERNL int
nc_get_var_text(int ncid, int varid, char *ip);
EXTERNL int
nc_put_var_uchar(int ncid, int varid, const unsigned char *op);
EXTERNL int
nc_get_var_uchar(int ncid, int varid, unsigned char *ip);
EXTERNL int
nc_put_var_schar(int ncid, int varid, const signed char *op);
EXTERNL int
nc_get_var_schar(int ncid, int varid, signed char *ip);
EXTERNL int
nc_put_var_short(int ncid, int varid, const short *op);
EXTERNL int
nc_get_var_short(int ncid, int varid, short *ip);
EXTERNL int
nc_put_var_int(int ncid, int varid, const int *op);
EXTERNL int
nc_get_var_int(int ncid, int varid, int *ip);
EXTERNL int
nc_put_var_long(int ncid, int varid, const long *op);
EXTERNL int
nc_get_var_long(int ncid, int varid, long *ip);
EXTERNL int
nc_put_var_float(int ncid, int varid, const float *op);
EXTERNL int
nc_get_var_float(int ncid, int varid, float *ip);
EXTERNL int
nc_put_var_double(int ncid, int varid, const double *op);
EXTERNL int
nc_get_var_double(int ncid, int varid, double *ip);