win32/NET/netcdf_vb/NetCDF.vb


    ' int nc_put_varm_text(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const char *op);
    Declare Ansi Function nc_put_varm_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal imapp() As Int32, ByVal op As String) As Int32
    ' int nc_get_varm_text(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	char *ip);
    Declare Ansi Function nc_get_varm_text Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, ByVal op As StringBuilder) As Int32
    ' int nc_put_varm_uchar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const unsigned char *op);
    Declare Ansi Function nc_put_varm_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_varm_uchar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	unsigned char *ip);
    Declare Ansi Function nc_get_varm_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
         ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
         <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
         <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_varm_schar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const signed char *op);
    Declare Ansi Function nc_put_varm_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_varm_schar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	signed char *ip);
    Declare Ansi Function nc_get_varm_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_varm_short(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const short *op);
    Declare Ansi Function nc_put_varm_short Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Int16) As Int32
    ' int nc_get_varm_short(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	short *ip);
    Declare Ansi Function nc_get_varm_short Lib "netcdf.dll" (ByVal ncid As Int32, _
         ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
         <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
         <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Int16) As Int32
    ' int nc_put_varm_int(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const int *op);
    Declare Ansi Function nc_put_varm_int Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_varm_int(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	int *ip);
    Declare Ansi Function nc_get_varm_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_varm_long(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const long *op);
    Declare Ansi Function nc_put_varm_long Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_varm_long(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	long *ip);
    Declare Ansi Function nc_get_varm_long Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_varm_float(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const float *op);
    Declare Ansi Function nc_put_varm_float Lib "netcdf.dll" (ByVal ncid As Int32, _
      ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
      <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
      <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Single) As Int32
    ' int nc_get_varm_float(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	float *ip);
    Declare Ansi Function nc_get_varm_float Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Single) As Int32
    ' int nc_put_varm_double(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t *imapp, 
    '	const double *op);
    Declare Ansi Function nc_put_varm_double Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal op() As Double) As Int32
    ' int nc_get_varm_double(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const ptrdiff_t * imap, 
    '	double *ip);
    Declare Ansi Function nc_get_varm_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal imapp() As Int32, <[In](), Out()> ByVal ip() As Double) As Int32
    '
    'READING AND WRITING VARS ALL AT ONCE
    '
    ' int nc_put_var_text(int ncid, int varid, const char *op);
    Declare Ansi Function nc_put_var_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, ByVal op As String) As Int32
    ' int nc_get_var_text(int ncid, int varid, char *ip);
    Declare Ansi Function nc_get_var_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, ByVal ip As StringBuilder) As Int32
    ' int nc_put_var_uchar(int ncid, int varid, const unsigned char *op);
    Declare Ansi Function nc_put_var_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_var_uchar(int ncid, int varid, unsigned char *ip);
    Declare Ansi Function nc_get_var_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_var_schar(int ncid, int varid, const signed char *op);
    Declare Ansi Function nc_put_var_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_var_schar(int ncid, int varid, signed char *ip);
    Declare Ansi Function nc_get_var_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_var_short(int ncid, int varid, const short *op);
    Declare Ansi Function nc_put_var_short Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal op() As Int16) As Int32
    ' int nc_get_var_short(int ncid, int varid, short *ip);
    Declare Ansi Function nc_get_var_short Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal ip() As Int16) As Int32
    ' int nc_put_var_int(int ncid, int varid, const int *op);
    Declare Ansi Function nc_put_var_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_var_int(int ncid, int varid, int *ip);
    Declare Ansi Function nc_get_var_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_var_long(int ncid, int varid, const long *op);
    Declare Ansi Function nc_put_var_long Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_var_long(int ncid, int varid, long *ip);
    Declare Ansi Function nc_get_var_long Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_var_float(int ncid, int varid, const float *op);
    Declare Ansi Function nc_put_var_float Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal op() As Single) As Int32
    ' int nc_get_var_float(int ncid, int varid, float *ip);
    Declare Ansi Function nc_get_var_float Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal ip() As Single) As Int32
    ' int nc_put_var_double(int ncid, int varid, const double *op);
    Declare Ansi Function nc_put_var_double Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal op() As Double) As Int32
    ' int nc_get_var_double(int ncid, int varid, double *ip);
